update instructions